deploy/aks/zdb-backup-agent-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "13"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"extensions/v1beta1","kind":"Deployment","metadata":{"annotations":{},"labels":{"app":"zdb-backup-agent"},"name":"zdb-backup-agent-deployment","namespace":"zdb-system"},"spec":{"progressDeadlineSeconds":600,"replicas":1,"revisionHistoryLimit":10,"selector":{"matchLabels":{"app":"zdb-backup-agent"}},"template":{"metadata":{"creationTimestamp":null,"labels":{"app":"zdb-backup-agent"}},"spec":{"affinity":{"nodeAffinity":{"requiredDuringSchedulingIgnoredDuringExecution":{"nodeSel [...]
  creationTimestamp: "2019-02-26T05:32:45Z"
  generation: 465
  labels:
    app: zdb-backup-agent
  name: zdb-backup-agent-deployment
  namespace: zdb-system
  resourceVersion: "54199537"
  selfLink: /apis/extensions/v1beta1/namespaces/zdb-system/deployments/zdb-backup-agent-deployment
  uid: f212b737-3987-11e9-814c-ca0890826a6e
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: zdb-backup-agent
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: zdb-backup-agent
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: beta.kubernetes.io/arch
                operator: In
                values:
                - amd64
              - key: role
                operator: In
                values:
                - management
      automountServiceAccountToken: true
      containers:
      - env:
        - name: cluster.master
          valueFrom:
            configMapKeyRef:
              key: cluster.master
              name: zdb-portal-server-config
        - name: domain.custom
          valueFrom:
            configMapKeyRef:
              key: domain.custom
              name: zdb-portal-server-config
        - name: storage.accessKey
          valueFrom:
            configMapKeyRef:
              key: storage.accessKey
              name: zdb-portal-server-config
        - name: storage.secretKey
          valueFrom:
            configMapKeyRef:
              key: storage.secretKey
              name: zdb-portal-server-config
        - name: storage.apiKey
          valueFrom:
            configMapKeyRef:
              key: storage.apiKey
              name: zdb-portal-server-config
        - name: storage.endpointUrl
          valueFrom:
            configMapKeyRef:
              key: storage.endpointUrl
              name: zdb-portal-server-config
        - name: storage.location
          valueFrom:
            configMapKeyRef:
              key: storage.location
              name: zdb-portal-server-config
        - name: backup.throttle
          valueFrom:
            configMapKeyRef:
              key: backup.throttle
              name: zdb-portal-server-config
        - name: storage.storageClass
          valueFrom:
            configMapKeyRef:
              key: storage.storageClass
              name: zdb-portal-server-config
        image: registry.au-syd.bluemix.net/cloudzdb/zdb-backup-agent:1.2.0
        imagePullPolicy: Always
        name: zdb-backup-agent
        ports:
        - containerPort: 8080
          protocol: TCP
        resources:
          limits:
            cpu: 500m
            memory: 1500Mi
          requests:
            cpu: 500m
            memory: 1500Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /app
          name: share-storage
      dnsPolicy: ClusterFirst
      imagePullSecrets:
      - name: zdb-system-secret
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: zdb-system-account
      serviceAccountName: zdb-system-account
      terminationGracePeriodSeconds: 30
      tolerations:
      - effect: NoSchedule
        key: management
        operator: Equal
        value: "true"
      volumes:
      - name: share-storage
        persistentVolumeClaim:
          claimName: zdb-data
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2019-02-26T05:32:45Z"
    lastUpdateTime: "2019-02-26T05:32:45Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2019-02-26T05:43:01Z"
    lastUpdateTime: "2019-08-30T07:23:15Z"
    message: ReplicaSet "zdb-backup-agent-deployment-95b5c5dc" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 465
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
