deploy/aks/zdb-ha-manager-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "9"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1beta2","kind":"Deployment","metadata":{"annotations":{},"labels":{"app":"zdb-ha-manager"},"name":"zdb-ha-manager-deployment","namespace":"zdb-system"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"zdb-ha-manager"}},"template":{"metadata":{"labels":{"app":"zdb-ha-manager"}},"spec":{"affinity":{"nodeAffinity":{"requiredDuringSchedulingIgnoredDuringExecution":{"nodeSelectorTerms":[{"matchExpressions":[{"key":"beta.kubernetes.io/arch","operator":"In","values":["a [...]
  creationTimestamp: "2019-03-05T10:30:41Z"
  generation: 29
  labels:
    app: zdb-ha-manager
  name: zdb-ha-manager-deployment
  namespace: zdb-system
  resourceVersion: "52748525"
  selfLink: /apis/extensions/v1beta1/namespaces/zdb-system/deployments/zdb-ha-manager-deployment
  uid: b9aab82a-3f31-11e9-8691-ca1ee2c5e671
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: zdb-ha-manager
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: zdb-ha-manager
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: beta.kubernetes.io/arch
                operator: In
                values:
                - amd64
              - key: role
                operator: In
                values:
                - management
      automountServiceAccountToken: true
      containers:
      - env:
        - name: JAVA_OPTS
          value: -Xms1024m -Xmx1536m
        - name: etcd.failure
          value: "5"
        - name: etcd.delay
          value: "5000"
        - name: cluster.master
          valueFrom:
            configMapKeyRef:
              key: cluster.master
              name: zdb-portal-server-config
        image: registry.au-syd.bluemix.net/cloudzdb/zdb-ha-manager:1.2.0
        imagePullPolicy: Always
        name: zdb-ha-manager
        ports:
        - containerPort: 8080
          protocol: TCP
        resources:
          requests:
            cpu: 300m
            memory: 1500Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /app
          name: share-storage
      dnsPolicy: ClusterFirst
      imagePullSecrets:
      - name: zdb-system-secret
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: zdb-system-account
      serviceAccountName: zdb-system-account
      terminationGracePeriodSeconds: 30
      tolerations:
      - effect: NoSchedule
        key: management
        operator: Equal
        value: "true"
      volumes:
      - name: share-storage
        persistentVolumeClaim:
          claimName: zdb-data
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2019-03-05T10:30:41Z"
    lastUpdateTime: "2019-08-29T11:38:59Z"
    message: ReplicaSet "zdb-ha-manager-deployment-7d7bfdf7b" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  - lastTransitionTime: "2019-08-29T13:06:13Z"
    lastUpdateTime: "2019-08-29T13:06:13Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  observedGeneration: 29
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
